# vcell

./: .classpath  .dockerignore  .gitattributes  .gitignore  .gitmodules  .java-version  .mailmap  .project  .travis.yml  Alpha_5_2_Install.install4j  BioModel1_spatial.vcml  BioModel1_spatial.xml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-api  Dockerfile-api-dev  Dockerfile-batch  Dockerfile-batch-dev  Dockerfile-batch_NOT_USED  Dockerfile-clientgen  Dockerfile-clientgen_NOT_USED  Dockerfile-master  Dockerfile-master-dev  Dockerfile-rmi  Dockerfile-rmi-dev  Dockerfile.api  Dockerfile.rmi  INSTALL.TXT  IssueManagement.xlsx  MiriamJavaLib-standalone-20070625.jar.REMOVED.git-id  MiriamJavaLib-standalone-20080421.jar.REMOVED.git-id  NetCDF2_2_20_VCell.jar.REMOVED.git-id  README.TXT  README.md  README_BioSim.md  README_Debugging.md  README_VCell.md  README_certs.md  (+140 more)
docker/swarm/vcell-admin/: README.md  pyproject.toml
python-restclient/: .openapi-generator-ignore  README.md  example_latest.ipynb  pyproject.toml  scratch.py  tox.ini
python-restclient/.github/workflows/: python.yml
python-restclient/.openapi-generator/: FILES
python-restclient/docs/: AccesTokenRepresentationRecord.md  AccessTokenRepresentation.md  AdminResourceApi.md  AnalyticCurve.md  AnalyzedFile.md  AnalyzedResultsFromFieldData.md  AnnotatedFunctionDTO.md  ApplicationInfo.md  AuthCodeResponse.md  AuthResourceApi.md  BatchSystemType.md  BioModel.md  BioModelChildSummary.md  BioModelContext.md  BioModelResourceApi.md  BioModelSummary.md  BiomodelRef.md  CartesianMesh.md  CompositeCurve.md  ControlPointCurve.md  Coordinate.md  CopasiOptimizationMethod.md  CopasiOptimizationMethodOptimizationMethodType.md  CopasiOptimizationParameter.md  CopasiOptimizationParameterDataType.md  CopasiOptimizationParameterParamType.md  CopyFieldData.md  CreateFieldDataFromSimulation.md  Curve.md  CurveSelectionInfo.md  DataIdentifier.md  DetailedState.md  DifferentParameterValues.md  Domain.md  ExportEvent.md  ExportFormat.md  ExportHistory.md  ExportProgressType.md  ExportResourceApi.md  ExportableDataType.md  (+122 more)
python-restclient/examples/: FieldDataScratch.py  example_latest.ipynb  scratch.py
python-restclient/test/: test_acces_token_representation_record.py  test_access_token_representation.py  test_admin_resource_api.py  test_analytic_curve.py  test_analyzed_file.py  test_analyzed_results_from_field_data.py  test_annotated_function_dto.py  test_application_info.py  test_auth_code_response.py  test_auth_resource_api.py  test_batch_system_type.py  test_bio_model.py  test_bio_model_child_summary.py  test_bio_model_context.py  test_bio_model_resource_api.py  test_bio_model_summary.py  test_biomodel_ref.py  test_cartesian_mesh.py  test_composite_curve.py  test_control_point_curve.py  test_coordinate.py  test_copasi_optimization_method.py  test_copasi_optimization_method_optimization_method_type.py  test_copasi_optimization_parameter.py  test_copasi_optimization_parameter_data_type.py  test_copasi_optimization_parameter_param_type.py  test_copy_field_data.py  test_create_field_data_from_simulation.py  test_curve.py  test_curve_selection_info.py  test_data_identifier.py  test_detailed_state.py  test_different_parameter_values.py  test_domain.py  test_export_event.py  test_export_format.py  test_export_history.py  test_export_progress_type.py  test_export_resource_api.py  test_exportable_data_type.py  (+122 more)
python-restclient/vcell_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python-restclient/vcell_client/api/: __init__.py  admin_resource_api.py  auth_resource_api.py  bio_model_resource_api.py  export_resource_api.py  field_data_resource_api.py  geometry_resource_api.py  hello_world_api.py  math_model_resource_api.py  optimization_resource_api.py  publication_resource_api.py  simulation_resource_api.py  solver_resource_api.py  spatial_resource_api.py  users_resource_api.py  vc_image_resource_api.py
python-restclient/vcell_client/auth/: auth_utils.py  auth_utils_requests_oathlib.py
python-restclient/vcell_client/models/: __init__.py  acces_token_representation_record.py  access_token_representation.py  analytic_curve.py  analyzed_file.py  analyzed_results_from_field_data.py  annotated_function_dto.py  (+141 more)
python-utils/: README.md  pyproject.toml
python-utils/tests/: citation_test.py  hdf5_test.py  vcell_datamodels_test.py
pythonCopasiOpt/vcell-opt/: paramest.ipynb  pyproject.toml
pythonData/: CartesianMeshMapping.java  README.md  example.ipynb  full.ipynb  pyproject.toml
pythonData/test_data/: SimID_946368938_simdata.tgz
pythonData/tests/: expression_test.py  fv_mesh_mapping_test.py  fvsolver_test.py  vcell_parsing_test.py  zarr_writer_test.py
pythonData/vcelldata/: main.py  mesh.py  omero_zarr_writer.py  postprocessing.py  simdata_models.py  zarr_writer.py
pythonProject/vcell-opt/: README.md  paramest.ipynb  pyproject.toml
pythonScripts/VCell_VisIt/: convertSmoldyn.py  pyproject.toml  vcellProxy.py  visMainCLI.py  visMainCLI_Debug.py  visMainStandalone_Fake.py  visMainStandalone_VTK.py
pythonVtk/: README.md  pyproject.toml
pythonVtk/python_vtk/: mypy.ini
pythonVtk/vtkService/: makeLittleVtk.py  vtkAddData_not_used.py  vtkService.py
vcell-cli-utils/: .gitignore  CHANGELOG.md  License  README.md  Readme.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
vcell-cli-utils/biosimulations_pipeline/: README.md  biosim_api.py  biosimulations_1_upload.py  biosimulations_2_download.py  biosimulations_3_compare.py  biosimulations_4_delete.py  biosimulations_5_publish.py  biosimulations_6_run_requests_again.py  biosimulations_clear_requests.py  biosimulations_json_to_csv.py  cli.py  data_manager.py  datamodels.py  hdf5_compare.py  run_project_on_biosimulations.py
vcell-cli-utils/tests/: citation_test.py  cli_test.py  hdf5_test.py  vcell_datamodels_test.py
vcell-cli-utils/vcell_cli_utils/: cli.py  downloadProjects.py  status.py  wrapper.py
vcell-cli-utils/vcell_pipeline/: citation.py  download_biosim_projects.py  download_vcell_omex.py  vcell_datamodels.py
(+23528 files in other folders)
