[tool.poetry]
name = "vcelldata"
version = "0.1.0"
description = ""
authors = ["Jim Schaff <schaff.jim@gmail.com>"]
readme = "README.md"
packages = [{ include = "vcelldata" }]


[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
numexpr = "^2.10.0"
zarr = "^2.17.2"
matplotlib = "^3.8.4"
h5py = "^3.11.0"
pathlib = "^1.0.1"
jupyterlab = "^4.1.8"
vtk = "^9.3.0"
numpy = "^1.26.4"
orjson = "^3.10.3"
pyvista = "^0.43.8"
trame = "^3.6.1"
ipyvtklink = "^0.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
