[tool.poetry]
name = "vcelldata"
version = "0.1.0"
description = ""
authors = ["Jim Schaff <schaff.jim@gmail.com>"]
readme = "README.md"
packages = [{ include = "vcelldata" }]

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"


[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
numexpr = "^2.10.0"
zarr = "^2.17.2"
matplotlib = "^3.8.4"
h5py = "^3.11.0"
pathlib = "^1.0.1"
numpy = "^1.26.4"
orjson = "^3.10.3"
jupyterlab = ">=3"
ipywidgets = "^8.1.3"
pyvista = {extras = ["all", "trame"], version = "^0.43.9"}
trame-jupyter-extension = "<2"
pyvcell-fvsolver = "^0.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
