[tool.poetry]
name = "pythonvtk"
version = "0.1.0"
description = ""
authors = ["Jim Schaff <schaff.jim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
vtk = "^9.2.6"
thrift = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

