[tool.poetry]
name = "vcell-visit"
version = "0.1.0"
description = "vcell visit integration"
authors = ["Virtual Cell"]
license = "MIT"
repository = "https://github.com/virtualcell/vcell"
keywords = ["CLI"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.scripts]
vcellvis = "vcell_admin.visMainStandalone_VTK:main"

readme = "README.md"

#packages = ["vcell_visit"]

[tool.poetry.dependencies]
python = "^3.9, <3.12"
pyside6 = "^6.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
