[tool.poetry]
name = "vcell-admin"
version = "0.1.0"
description = "Administrative CLI for Docker Swarm deployment of VCell"
authors = ["Virtual Cell"]
license = "MIT"
repository = "https://github.com/virtualcell/vcell"
keywords = ["CLI"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.scripts]
cli = "vcell_admin.cli:start"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "<4.0"
paramiko = "^2.11.0"
requests = "^2.28.1"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
